# OpenColorIO-Config-ACES

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: configuration-artifacts.yml  continuous-integration-quality-unit-tests.yml  continuous-integration-static-type-checking.yml  continuous-integration.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  manual.rst  opencolorio_config_aces.clf.rst  opencolorio_config_aces.config.rst  opencolorio_config_aces.rst  opencolorio_config_aces.utilities.rst  process.rst  reference.rst  requirements.txt  status.rst  usage.rst  user-guide.rst
docs/_static/: custom.css
docs/_templates/: class.rst
opencolorio_config_aces/: __init__.py
opencolorio_config_aces/clf/: __init__.py
opencolorio_config_aces/clf/discover/: __init__.py  classify.py
opencolorio_config_aces/clf/transforms/: __init__.py  aces.py  common.py  utilities.py  utility.py
opencolorio_config_aces/clf/transforms/apple/: __init__.py  generate.py
opencolorio_config_aces/clf/transforms/apple/input/: Apple.Input.Apple_Log-Curve.clf  Apple.Input.Apple_Log_to_ACES2065-1.clf
opencolorio_config_aces/clf/transforms/arri/: __init__.py  generate.py
opencolorio_config_aces/clf/transforms/arri/input/: ARRI.Input.ARRI_LogC3_Curve_EI800.clf  ARRI.Input.ARRI_LogC3_EI800_to_ACES2065-1.clf  ARRI.Input.ARRI_LogC4_Curve.clf  ARRI.Input.ARRI_LogC4_to_ACES2065-1.clf  ARRI.Input.Linear_ARRI_Wide_Gamut_3_to_ACES2065-1.clf  ARRI.Input.Linear_ARRI_Wide_Gamut_4_to_ACES2065-1.clf  ARRI.LogC3_EI800_to_ACES2065-1.clf  ARRI.LogC4_to_ACES2065-1.clf
opencolorio_config_aces/clf/transforms/blackmagic/: __init__.py  generate.py
opencolorio_config_aces/clf/transforms/blackmagic/input/: BMDFilm-WideGamut-Gen5-Curve.clf  BMDFilm-WideGamut-Gen5_to_ACES2065-1.clf  BlackmagicDesign.Input.BMDFilm_Gen5_Log-Curve.clf  BlackmagicDesign.Input.BMDFilm_WideGamut_Gen5_to_ACES2065-1.clf  BlackmagicDesign.Input.DaVinci_Intermediate_Log-Curve.clf  BlackmagicDesign.Input.DaVinci_Intermediate_WideGamut_to_ACES2065-1.clf  BlackmagicDesign.Input.Linear_BMD_WideGamut_Gen5_to_ACES2065-1.clf  BlackmagicDesign.Input.Linear_DaVinci_WideGamut_to_ACES2065-1.clf  DaVinci-Intermediate-Curve.clf  DaVinci-Intermediate-WideGamut_to_ACES2065-1.clf  Linear-BMD-WideGamut-Gen5_to_ACES2065-1.clf
opencolorio_config_aces/clf/transforms/builtins/aces/: ACES.OCIO.AP0_to_AP1-Gamma2.2.clf  ACES.OCIO.AP0_to_P3-D65.clf  ACES.OCIO.AP0_to_Rec.2020.clf  ACES.OCIO.AP0_to_Rec.709-Gamma1.8.clf  ACES.OCIO.AP0_to_Rec.709-Gamma2.2.clf  ACES.OCIO.AP0_to_Rec.709-Gamma2.4.clf  ACES.OCIO.AP0_to_Rec.709-sRGB.clf  ACES.OCIO.AP0_to_Rec.709.clf  ACES.OCIO.Rec.709-sRGB_to_AP0.clf  AP0_to_AP1-Gamma2.2.clf  AP0_to_P3-D65-Linear.clf  AP0_to_Rec2020-Linear.clf  AP0_to_Rec709-Gamma1.8.clf  AP0_to_Rec709-Gamma2.2.clf  AP0_to_Rec709-Gamma2.4.clf  AP0_to_Rec709-Linear.clf  AP0_to_Rec709-sRGB.clf
opencolorio_config_aces/clf/transforms/builtins/common/: Common.OCIO.Linear_to_Rec1886.clf  Common.OCIO.Linear_to_sRGB.clf  Linear_to_Rec1886.clf  Linear_to_sRGB.clf
opencolorio_config_aces/clf/transforms/builtins/utility/: AP0_to_Rec709-Gamma2.2.clf  AP0_to_Rec709-Linear.clf  Linear_to_sRGB.clf
opencolorio_config_aces/clf/transforms/canon/: __init__.py  generate.py
opencolorio_config_aces/clf/transforms/canon/input/: Canon.Input.CLog2-Curve.clf  Canon.Input.CLog3-Curve.clf  Canon.Input.CanonLog2_CinemaGamut-D55_to_ACES2065-1.clf  Canon.Input.CanonLog3_CinemaGamut-D55_to_ACES2065-1.clf  Canon.Input.Linear-CinemaGamut-D55_to_ACES2065-1.clf
opencolorio_config_aces/clf/transforms/itu/: __init__.py  generate.py
opencolorio_config_aces/clf/transforms/itu/utility/: ITU.Utility.AP0_to_Camera_Rec709.clf  ITU.Utility.Rec709-Curve.clf
opencolorio_config_aces/clf/transforms/ocio/: __init__.py  generate.py
opencolorio_config_aces/clf/transforms/ocio/input/: OCIO.Input.AP0_to_Rec709-sRGB.clf  RED.Log3G10_RWG_to_ACES2065-1.clf
opencolorio_config_aces/clf/transforms/ocio/utility/: OCIO.Utility.AP0_to_AP1-Gamma2.2.clf  OCIO.Utility.AP0_to_AdobeRGB-Scene-referred.clf  OCIO.Utility.AP0_to_CIE-XYZ-D65-Scene-referred.clf  OCIO.Utility.AP0_to_CIE_XYZ-D65-Scene-referred.clf  OCIO.Utility.AP0_to_Display_P3-Scene-referred.clf  OCIO.Utility.AP0_to_Gamma1.8_Encoded_Rec709.clf  OCIO.Utility.AP0_to_Gamma1.8_Rec709-Scene-referred.clf  OCIO.Utility.AP0_to_Gamma1.8_Rec709-Texture.clf  OCIO.Utility.AP0_to_Gamma2.2_AP1-Scene-referred.clf  OCIO.Utility.AP0_to_Gamma2.2_AP1-Texture.clf  OCIO.Utility.AP0_to_Gamma2.2_Encoded_AP1.clf  OCIO.Utility.AP0_to_Gamma2.2_Encoded_AdobeRGB.clf  OCIO.Utility.AP0_to_Gamma2.2_Encoded_Rec709.clf  OCIO.Utility.AP0_to_Gamma2.2_Rec709-Scene-referred.clf  OCIO.Utility.AP0_to_Gamma2.2_Rec709-Texture.clf  OCIO.Utility.AP0_to_Gamma2.4_Encoded_Rec709.clf  OCIO.Utility.AP0_to_Gamma2.4_Rec709-Scene-referred.clf  (+30 more)
opencolorio_config_aces/clf/transforms/panasonic/: __init__.py  generate.py
opencolorio_config_aces/clf/transforms/red/: __init__.py  generate.py
opencolorio_config_aces/clf/transforms/sony/: __init__.py  generate.py
opencolorio_config_aces/config/: __init__.py
opencolorio_config_aces/config/cg/: __init__.py
opencolorio_config_aces/config/cg/generate/: __init__.py  config.py
opencolorio_config_aces/config/clf/: common.py
opencolorio_config_aces/config/generation/: __init__.py  beautifiers.py  common.py  configuration.py  factories.py  profile_version.py  version.py
opencolorio_config_aces/config/reference/: __init__.py
opencolorio_config_aces/config/reference/discover/: __init__.py  classify.py  graph.py
opencolorio_config_aces/config/reference/generate/: __init__.py  analytical.py  config.py
opencolorio_config_aces/config/studio/: __init__.py
opencolorio_config_aces/config/studio/generate/: __init__.py  config.py
opencolorio_config_aces/utilities/: __init__.py  common.py
utilities/resources/: texlive.profile
utilities/tools/testclf/: README.rst  requirements.txt  testclf.py
(+62 files in other folders)
